set bubble width to prevent jumping glitch between between initial and typing states

--- a/assets/widgetCss.css
+++ b/assets/widgetCss.css
@@ -47,6 +47,12 @@
     text-decoration: none;
 }
 
+/* set width to prevent jumping glitch between initial and typing states */
+#remotestorage-widget.remotestorage-state-initial .bubble,
+#remotestorage-widget.remotestorage-state-typing .bubble {
+    width: 185px;
+}
+
 #remotestorage-widget .bubble-text {
     padding-right: 32px;
 }
